Overflow Fixed

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -23,7 +23,7 @@
 
         display: flex;
         flex-direction: row;
-        height: 150px;
+        height: 180px;
         .tymbooker_image{
             height: 100px;
             width: 100px;
