--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -24,7 +24,7 @@
         height : 50px;
        
         font-weight: bold;
-        font-family: Georgia, 'Times New Roman', Times, serif;   
+        font-family: Arial, Helvetica, sans-serif;   
      }
 }
  
